--- a/src/package.json
+++ b/src/package.json
@@ -10,11 +10,9 @@
   "author": "Timea Kiss",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.14.0",
-    "express": "^4.14.0",
     "react": "^0.14.7",
-    "react-burger-menu": "^1.10.7",
     "react-dom": "^0.14.7",
+    "react-gmaps": "^1.5.0",
     "react-router": "^2.0.0"
   },
   "devDependencies": {
